<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/foodAppAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_author"
            android:paddingBottom="15dp"/>

    <TextView
            android:id="@+id/foodAppVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_version"
            android:paddingBottom="15dp"/>

    <TextView
            android:id="@+id/foodHelpHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_instruction_title"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="15dp"/>

    <TextView
            android:id="@+id/foodHelpInstruction1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_instruction1"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/foodHelpInstruction2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_instruction2"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/foodHelpInstruction3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_instruction3"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/foodHelpInstruction4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_instruction4"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:id="@+id/foodHelpInstruction5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_instruction5"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/foodHelpInstruction6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_help_instructions6"/>

</LinearLayout>