<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/favourite_news_toolbar_menu_button"
            android:title="@string/news_list_overflow_menu_favourite_news"
            android:icon="@drawable/icons8_christmas_star_filled_50"
            app:showAsAction="never"/>

    <item
            android:id="@+id/item_cbc"
            android:title="@string/menu_nav_item_news"
            android:icon="@drawable/news"
            app:showAsAction="never"/>

    <item
            android:id="@+id/item_movie"
            android:title="@string/menu_nav_item_movie"
            android:icon="@drawable/movie"
            app:showAsAction="never"/>

    <item
            android:id="@+id/item_bus"
            android:title="@string/menu_nav_item_bus"
            android:icon="@drawable/bus"
            app:showAsAction="never"/>

    <item android:id="@+id/foodHelpIcon"
          android:title="@string/menu_help_item"
          android:icon="@drawable/help"
          android:orderInCategory="100"
          app:showAsAction="never" />

</menu>