<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/favourite_movies_toolbar_menu_button"
            android:title="Favourite Movies"
            android:icon="@drawable/addmovie"
            app:showAsAction="never"/>

    <item
            android:id="@+id/item_cbc"
            android:title="@string/menu_nav_item_news"
            android:icon="@drawable/news"
            app:showAsAction="never"/>

    <item
            android:id="@+id/item_movie"
            android:title="@string/menu_nav_item_movie"
            android:icon="@drawable/movie"
            app:showAsAction="never"/>

    <item
            android:id="@+id/item_bus"
            android:title="@string/menu_nav_item_bus"
            android:icon="@drawable/bus"
            app:showAsAction="never"/>

    <item android:id="@+id/foodHelpIcon"
          android:title="help"
          android:icon="@drawable/addmovie"
          android:orderInCategory="100"
          app:showAsAction="never" />

</menu>