<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FoodDetails">

    <android.support.v7.widget.Toolbar
            android:id="@+id/foodDetailsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"/>

    <TextView
            android:id="@+id/foodNameDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:hint="@string/food_details_textHint_FoodName"
            android:layout_below="@+id/foodDetailsToolbar"/>

    <TextView
            android:id="@+id/foodCaloriesContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_below="@id/foodNameDetails"
            android:hint="@string/food_details_textHint_calories"/>

    <TextView
            android:id="@+id/foodFatContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/foodCaloriesContent"
            android:textSize="30dp"
            android:hint="@string/food_details_textHint_fat"/>

    <Button
            android:id="@+id/foodTagDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/foodFatContent"
            android:layout_centerInParent="true"
            android:textSize="30dp"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/foodDelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_details_delete"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/foodTagDetails"
            android:layout_marginTop="15dp"/>

    <Button
            android:id="@+id/foodCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_details_cancel"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/foodTagDetails"
            android:layout_marginTop="15dp"/>

    <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_below="@+id/foodCancelBtn"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/minCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="30dp"
            android:layout_below="@+id/summary"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/maxCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="30dp"
            android:layout_below="@+id/minCal"/>

    <TextView
            android:id="@+id/averageCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="30dp"
            android:layout_below="@+id/maxCal"/>

    <TextView
            android:id="@+id/totalCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="30dp"
            android:layout_below="@+id/averageCal"/>

</RelativeLayout>