<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FoodSearch">

    <android.support.v7.widget.Toolbar
            android:id="@+id/foodSearchToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"/>

    <ProgressBar
            android:id="@+id/foodSearchProgress"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/foodSearchToolbar"/>

    <TextView
            android:id="@+id/foodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/foodSearchProgress"
            android:text="@string/food_search_name"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/foodCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/foodName"
            android:text="@string/food_search_calories"/>

    <ImageButton
            android:id="@+id/foodAddBtn"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:src="@drawable/food_add"
            android:layout_below="@+id/foodCalories"
            android:layout_toRightOf="@+id/foodFat"
            android:layout_marginTop="-1dp"
            android:visibility="invisible"/>

    <TextView
            android:id="@+id/foodFat"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/food_search_fat"
            android:layout_below="@+id/foodCalories"/>

    <TextView
            android:id="@+id/foodFavoriteList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_below="@+id/foodAddBtn"
            android:text="@string/food_search_favorites_heading"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:src="@drawable/food_add_tag"
            android:id="@+id/foodTagEditBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/foodFavoriteList"
            android:layout_marginRight="-15dp"/>

    <ListView
            android:id="@+id/foodListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/foodTagEditBtn"
            android:padding="10dp"/>

</RelativeLayout>