<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
>

    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            card_view:cardElevation="10dp"
            android:layout_height="180dp"
            android:id="@+id/BusCardView"
            android:layout_margin="15dp"
    >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
        >
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/bus_destination"
                      android:textSize="30sp"
                      android:layout_marginTop="10dp"
                      android:id="@+id/busDestinationText"
                      android:layout_marginBottom="3dp"
                      android:layout_marginStart="10dp"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_below="@id/busDestinationText"
                          android:layout_marginTop="10dp"
                          android:layout_marginStart="10dp"
                          android:layout_marginEnd="10dp">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Adjusted Time"
                          android:layout_marginBottom="3dp"
                          android:id="@+id/busTimeView" tools:ignore="HardcodedText"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="GPS Position"
                          android:layout_marginBottom="3dp"
                          android:id="@+id/busPosView" tools:ignore="HardcodedText"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Speed"
                          android:layout_marginBottom="3dp"
                          android:id="@+id/busSpeedView" tools:ignore="HardcodedText"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Start Time"
                          android:id="@+id/busStartView" tools:ignore="HardcodedText"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_below="@id/busDestinationText"
                          android:layout_marginTop="10dp"
                          android:layout_marginStart="100dp"
                          android:layout_marginEnd="10dp">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/scheduleText"
                          android:text="@string/adjusted_schedule_time"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/position"
                          android:text="@string/bus_latitude"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/gpsText"
                          android:text="@string/bus_gps_speed"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/startTimeText"
                          android:text="@string/bus_start_time"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>